[gd_scene load_steps=2 format=2]

[ext_resource path="res://enemies/EnemyChat.gd" type="Script" id=1]

[node name="EnemyWords" type="PanelContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="."]
margin_left = 6.0
margin_top = 4.0
margin_right = 1274.0
margin_bottom = 716.0

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer"]
margin_right = 1256.0
margin_bottom = 1252.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 16

[node name="HBoxContainer3" type="HBoxContainer" parent="ScrollContainer/VBoxContainer"]
margin_right = 1256.0
margin_bottom = 22.0

[node name="HBoxContainer3" type="HBoxContainer" parent="ScrollContainer/VBoxContainer/HBoxContainer3"]
margin_right = 451.0
margin_bottom = 22.0

[node name="Label" type="Label" parent="ScrollContainer/VBoxContainer/HBoxContainer3/HBoxContainer3"]
margin_right = 47.0
margin_bottom = 22.0
text = "Voice:"

[node name="VoiceEdit" type="LineEdit" parent="ScrollContainer/VBoxContainer/HBoxContainer3/HBoxContainer3"]
margin_left = 51.0
margin_right = 451.0
margin_bottom = 22.0
rect_min_size = Vector2( 400, 0 )
caret_blink = true

[node name="VoiceGameButton" type="Button" parent="ScrollContainer/VBoxContainer/HBoxContainer3"]
margin_left = 455.0
margin_right = 628.0
margin_bottom = 22.0
text = "Choose from game folder"

[node name="VoiceModButton" type="Button" parent="ScrollContainer/VBoxContainer/HBoxContainer3"]
margin_left = 632.0
margin_right = 799.0
margin_bottom = 22.0
text = "Choose from mod folder"

[node name="HBoxContainer" type="HBoxContainer" parent="ScrollContainer/VBoxContainer"]
margin_top = 38.0
margin_right = 1256.0
margin_bottom = 60.0

[node name="HBoxContainer" type="HBoxContainer" parent="ScrollContainer/VBoxContainer/HBoxContainer"]
margin_right = 233.0
margin_bottom = 22.0

[node name="Label" type="Label" parent="ScrollContainer/VBoxContainer/HBoxContainer/HBoxContainer"]
margin_right = 79.0
margin_bottom = 22.0
text = "Chat Voice:"

[node name="ChatVoiceEdit" type="LineEdit" parent="ScrollContainer/VBoxContainer/HBoxContainer/HBoxContainer"]
margin_left = 83.0
margin_right = 233.0
margin_bottom = 22.0
rect_min_size = Vector2( 150, 0 )
caret_blink = true

[node name="HBoxContainer2" type="HBoxContainer" parent="ScrollContainer/VBoxContainer/HBoxContainer"]
margin_left = 237.0
margin_right = 466.0
margin_bottom = 22.0

[node name="Label" type="Label" parent="ScrollContainer/VBoxContainer/HBoxContainer/HBoxContainer2"]
margin_right = 75.0
margin_bottom = 22.0
text = "Chat Style:"

[node name="ChatStyleEdit" type="LineEdit" parent="ScrollContainer/VBoxContainer/HBoxContainer/HBoxContainer2"]
margin_left = 79.0
margin_right = 229.0
margin_bottom = 22.0
rect_min_size = Vector2( 150, 0 )
caret_blink = true

[node name="HBoxContainer2" type="HBoxContainer" parent="ScrollContainer/VBoxContainer"]
margin_top = 76.0
margin_right = 1256.0
margin_bottom = 100.0

[node name="AlwaysFirstWordsCheck" type="CheckBox" parent="ScrollContainer/VBoxContainer/HBoxContainer2"]
margin_right = 180.0
margin_bottom = 24.0
text = "Always say First Words?"

[node name="AlwaysLastWordsCheck" type="CheckBox" parent="ScrollContainer/VBoxContainer/HBoxContainer2"]
margin_left = 184.0
margin_right = 362.0
margin_bottom = 24.0
text = "Always say Last Words?"

[node name="WordsContainer" type="VBoxContainer" parent="ScrollContainer/VBoxContainer"]
margin_top = 116.0
margin_right = 1256.0
margin_bottom = 292.0

[node name="Label" type="Label" parent="ScrollContainer/VBoxContainer/WordsContainer"]
margin_right = 1256.0
margin_bottom = 22.0
text = "First Words"

[node name="FirstWordsEdit" type="TextEdit" parent="ScrollContainer/VBoxContainer/WordsContainer"]
margin_top = 26.0
margin_right = 1256.0
margin_bottom = 176.0
rect_min_size = Vector2( 0, 150 )
caret_blink = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WordsContainer2" type="VBoxContainer" parent="ScrollContainer/VBoxContainer"]
margin_top = 308.0
margin_right = 1256.0
margin_bottom = 484.0

[node name="Label" type="Label" parent="ScrollContainer/VBoxContainer/WordsContainer2"]
margin_right = 1256.0
margin_bottom = 22.0
text = "Last Words 1"

[node name="LastWords1Edit" type="TextEdit" parent="ScrollContainer/VBoxContainer/WordsContainer2"]
margin_top = 26.0
margin_right = 1256.0
margin_bottom = 176.0
rect_min_size = Vector2( 0, 150 )
caret_blink = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WordsContainer3" type="VBoxContainer" parent="ScrollContainer/VBoxContainer"]
margin_top = 500.0
margin_right = 1256.0
margin_bottom = 676.0

[node name="Label" type="Label" parent="ScrollContainer/VBoxContainer/WordsContainer3"]
margin_right = 1256.0
margin_bottom = 22.0
text = "Last Words 2"

[node name="LastWords2Edit" type="TextEdit" parent="ScrollContainer/VBoxContainer/WordsContainer3"]
margin_top = 26.0
margin_right = 1256.0
margin_bottom = 176.0
rect_min_size = Vector2( 0, 150 )
caret_blink = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WordsContainer4" type="VBoxContainer" parent="ScrollContainer/VBoxContainer"]
margin_top = 692.0
margin_right = 1256.0
margin_bottom = 868.0

[node name="Label" type="Label" parent="ScrollContainer/VBoxContainer/WordsContainer4"]
margin_right = 1256.0
margin_bottom = 22.0
text = "Last Words 3"

[node name="LastWords3Edit" type="TextEdit" parent="ScrollContainer/VBoxContainer/WordsContainer4"]
margin_top = 26.0
margin_right = 1256.0
margin_bottom = 176.0
rect_min_size = Vector2( 0, 150 )
caret_blink = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WordsContainer5" type="VBoxContainer" parent="ScrollContainer/VBoxContainer"]
margin_top = 884.0
margin_right = 1256.0
margin_bottom = 1060.0

[node name="Label" type="Label" parent="ScrollContainer/VBoxContainer/WordsContainer5"]
margin_right = 1256.0
margin_bottom = 22.0
text = "Last Words (If they win)"

[node name="LastWordsIfTheyWinEdit" type="TextEdit" parent="ScrollContainer/VBoxContainer/WordsContainer5"]
margin_top = 26.0
margin_right = 1256.0
margin_bottom = 176.0
rect_min_size = Vector2( 0, 150 )
caret_blink = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WordsContainer6" type="VBoxContainer" parent="ScrollContainer/VBoxContainer"]
margin_top = 1076.0
margin_right = 1256.0
margin_bottom = 1252.0

[node name="Label" type="Label" parent="ScrollContainer/VBoxContainer/WordsContainer6"]
margin_right = 1256.0
margin_bottom = 22.0
text = "Last Words Endgame"

[node name="LastWordsEndgameEdit" type="TextEdit" parent="ScrollContainer/VBoxContainer/WordsContainer6"]
margin_top = 26.0
margin_right = 1256.0
margin_bottom = 176.0
rect_min_size = Vector2( 0, 150 )
caret_blink = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VoiceFileDialog" type="FileDialog" parent="."]
margin_right = 325.0
margin_bottom = 140.0
rect_min_size = Vector2( 1000, 600 )
popup_exclusive = true
window_title = "Open a Directory"
mode = 2
access = 2
current_dir = "/projects/godot_projects/diceymodgeons"
current_path = "/projects/godot_projects/diceymodgeons/"
[connection signal="pressed" from="ScrollContainer/VBoxContainer/HBoxContainer3/VoiceGameButton" to="." method="_on_VoiceGameButton_pressed"]
[connection signal="pressed" from="ScrollContainer/VBoxContainer/HBoxContainer3/VoiceModButton" to="." method="_on_VoiceModButton_pressed"]
[connection signal="dir_selected" from="VoiceFileDialog" to="." method="_on_VoiceFileDialog_dir_selected"]
